# LearnECS

./: .gitignore  CMakeLists.txt  README.md
LearnECS/Source/Private/: main.cpp
LearnECS/Source/Private/Types/: ECSEntity.cpp  ECSRegistry.cpp
LearnECS/Source/Public/: ECS.h
LearnECS/Source/Public/Types/: ECSEntity.h  ECSRegistry.h  ECSTypes.h
